# Hardware-Doctor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml
installer/: trouble.nsi
src/: App.css  App.tsx  app.rs  audio.rs  controller.rs  keyboard.rs  main.rs  mouse.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  keyboard.rs  lib.rs  mouse.rs
src/components/: Sidebar.tsx
src/lib/: keyboardLayout.ts  modules.ts  mouseLayout.ts  useAudioDevices.ts
src/pages/: ComingSoonPage.tsx  HeadphonesPage.tsx  KeyboardPage.tsx  MicrophonePage.tsx  MousePage.tsx
src/panels/: controller.rs  headphones.rs  keyboard.rs  microphone.rs  mod.rs  mouse.rs
