[package]
name = "trouble"
version = "0.6.0"
description = "A self-hosted hardware diagnostics app (microphone, headphones, and more)"
authors = ["you"]
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
cpal = "0.15"
parking_lot = "0.12"
rdev = "0.5.3"
image = { version = "0.25.10", default-features = false, features = ["png"] }
# gilrs: controller support. On Linux dev machines this needs libudev-dev installed
# to build; on Windows it uses XInput and needs no extra system deps.
gilrs = "0.11"

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"
